se verifican las vistas del formulario legajos #56

--- a/views/sueldos/legajos.html
+++ b/views/sueldos/legajos.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 <h1>Registrar Legajo</h1>
 
-<form class="form-horizontal">
+<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos2")}}" enctype="multipart/form-data" method="POST">
 
           <div class="form-group">
             <label for="campo_nrolegajo" class="col-sm-2 control-label">Nro Legajo</label>
@@ -65,193 +65,7 @@
             </div>
     </div>
 
-<div class="form-group">
-            <label for="campo_domicilio" class="col-sm-2 control-label">Domicilio</label>
-            <div class="col-sm-8">
-                <input type="integer" class="form-control" id="domicilio" placeholder="Av Rivas 2233">
-            </div>
-          </div>
-
-<div class="form-group">
-            <label for="campo_localidad" class="col-sm-2 control-label">Localidad</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_localidad" placeholder="Morón">
-            </div>
-            <label for="campo_email" class="col-sm-2 control-label">Email</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_email" placeholder="perez@pascal.com.ar">
-            </div>
-            <label for="campo_feing" class="col-sm-2 control-label">Fecha Ingreso</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_feing" placeholder="15/01/2016">
-            </div>
-    </div>
-
-<div class="form-group">
-            <label for="campo_tel" class="col-sm-2 control-label">Teléfono</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_tel" placeholder="56567878">
-            </div>
-            <label for="campo_telcel" class="col-sm-2 control-label">Teléfono Celular</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control" id="campo_telcel" placeholder="1523239090">
-            </div>
-            <label for="campo_est" class="col-sm-2 control-label">Estudia</label>
-            <div class="col-sm-2">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
-            </div>
-   </div>
-
-<div class="form-group">
-            <label for="campo_ccuil" class="col-sm-2 control-label">Constancia de CUIL</label>
-            <div class="col-sm-1">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
-            </div>
-            <label for="campo_cdni" class="col-sm-2 control-label">Fotocopia DNI</label>
-            <div class="col-sm-1">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
-            </div>
-            <label for="campo_atemp" class="col-sm-2 control-label">Alta Temprana</label>
-            <div class="col-sm-1">
-                       <select class="form-control">
-                          <option>Si</option>
-                          <option>No</option>
-                       </select>
-            </div>
-   </div>
- <div class="form-group">
-            <label for="campo_lfam" class="col-sm-4 control-label">Libreta de Familia</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
- <div class="form-group">
-            <label for="campo_pnach" class="col-sm-4 control-label">Partida Nac. Hijos</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-</div>
-<div class="form-group">
-            <label for="campo_fdnih" class="col-sm-4 control-label">Fotoc. DNI Hijos</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-<div class="form-group">
-            <label for="campo_fdnic" class="col-sm-4 control-label">Fotoc. DNI Cónyuge</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-    <div class="form-group">
-            <label for="campo_ccuilh" class="col-sm-4 control-label">Constancia CUIL Hijos</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-    <div class="form-group">
-            <label for="campo_ccuilh" class="col-sm-4 control-label">Constancia CUIL Cónyuge</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-    <div class="form-group">
-            <label for="campo_caregh" class="col-sm-4 control-label">Constancia Alumno Regular Hijo</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-    <div class="form-group">
-            <label for="campo_careg" class="col-sm-4 control-label">Constancia Alumno Regular Empleado</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
-<div class="form-group">
-            <label for="campo_cve" class="col-sm-4 control-label">Currículum Empleado</label>
-            <div class="col-sm-3">
-                       <select class="form-control">
-                          <option>Corresponde</option>
-                          <option>No corresponde</option>
-                       </select>
-            </div>
-              <div class="col-sm-2">
-              <label>
-                <input type="checkbox"> Presentado
-              </label>
-            </div>
-    </div>
+</table>
+<form class="form-horizontal" action="{{=URL(c="sueldos", f="legajos")}}" enctype="multipart/form-data" method="POST">
+      <button type="submit" class="btn btn-default">Siguiente</button>
 </form>
