--- a/views/stock/alta_deposito.html
+++ b/views/stock/alta_deposito.html
@@ -31,6 +31,30 @@
 </br>
 
 
+        <div class="form-group">
+            <label for="codigo_deposito" class="col-sm-1 control-label">Tamaño del deposito</label>
+            <div class="col-sm-3">
+                <input type="integer" class="form-control" id="codigo_deposito"  placeholder="10 m2 ">
+            </div>
+         </div>
+
+<br>
+</br>
+
+         <div class="form-group">
+            <label for="campo_tipo" class="col-sm-1 control-label">Custodia</label>
+            <div class="col-sm-2">
+               <select class="form-control" id="campo_tipo">
+                  <option>Si</option>
+                  <option>No</option>
+               </select>
+            </div>
+         </div>
+
+
+<br>
+</br>
+
     <div class="form-group">
             <label for="campo_tipo" class="col-sm-1 control-label">Disponibilidad</label>
             <div class="col-sm-2">
