--- a/views/stock/emision_remito.html
+++ b/views/stock/emision_remito.html
@@ -60,18 +60,9 @@
            </div>
 <br>
 </br>
-            <div class="form-group">
-                <label for="campo_obs" class="col-sm-2 control-label">Productos Agregados:</label>
-                    <div class="col-sm-4">
-                  <textarea class="form-control" id="campo_obs" rows="6"></textarea>
-            </div>
-          </div>
-
-<br>
+  <br>
 </br>
 
-            <button type="submit" class="btn btn-default">Emitir</button>
-
-            <button type="submit" class="btn btn-default">Anular</button>
+            <a class="btn btn-default" role="button" href="{{=URL(c="stock",f="emision_remito2",vars={"id":1,"nombre":"mark"})}}">Siguiente</a> <a class="btn btn-default" role="button" href="{{=URL(c="default",f="index",vars={"id":1,"nombre":"mark"})}}">Cancelar</a>
 <br>
 </br>
