--- a/views/stock/resepcion_remito.html
+++ b/views/stock/resepcion_remito.html
@@ -60,12 +60,20 @@
            </div>
 <br>
 </br>
-            <div class="form-group">
-                <label for="campo_obs" class="col-sm-2 control-label">Productos Agregados:</label>
-                    <div class="col-sm-4">
-                  <textarea class="form-control" id="campo_obs" rows="6"></textarea>
-            </div>
-          </div>
+            <table class="table">
+    <caption></caption>
+    <thead>
+        <tr>
+            <th>Codigo</th> <th>Producto</th> <th>Cantidad</th> <th>Opciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr> <th scope="row">0001</th> <td>Monitor</td>  <td>1</td> <td> <a class="btn btn-default" role="button" >Eliminar</a></td></tr>
+        <tr> <th scope="row">0002</th> <td>Mouse</td><td>3</td><td> <a class="btn btn-default" role="button" >Eliminar</a></td> </tr>
+        <tr> <th scope="row">0003</th> <td>Memorias</td>  <td>5</td><td> <a class="btn btn-default" role="button" >Eliminar</a></td> </tr>
+    </tbody>
+</table>
+</h3>
 
 <br>
 </br>
