--- a/views/compra/informe_subdiariob.html
+++ b/views/compra/informe_subdiariob.html
@@ -13,7 +13,7 @@
 
 
 <table class="table" >
-<style> table  td:nth-child(7){text-align: center;}
+<style> table  td:nth-child(7){text-align: Right;}
                td:nth-child(8){text-align: center;}
                td:nth-child(9){text-align: center;}
                td:nth-child(10){text-align: center;}
