--- a/views/stock/alta_producto.html
+++ b/views/stock/alta_producto.html
@@ -1,6 +1,8 @@
 {{extend 'layout.html'}}
-<h1>Registrar Producto nuevo</h1>
 
+<h1>Registrar Producto nuevo</h1>
+<br>
+</br>
 <form class="form-horizontal">
 
           <div class="form-group">
@@ -9,16 +11,6 @@
                 <input type="text" class="form-control" id="nombre_producto" placeholder="">
             </div>
           </div>
-
-
-
-          <div class="form-group">
-            <label for="precio_producto" class="col-sm-1 control-label">Precio del producto</label>
-            <div class="col-sm-3">
-                <input type="number" class="form-control" id="precio_producto" step="00.01" placeholder="">
-            </div>
-          </div>
-
 
 
 
@@ -45,7 +37,7 @@
            <div class="form-group">
                <label for="proveedor" class="col-sm-1 control-label">Proveedor</label>
                 <div class="col-sm-3">
-                   <input type="number" class="form-control" id="proveedor"  placeholder="">
+                   <input type="text" class="form-control" id="proveedor"  placeholder="">
                 </div>
            </div>
 
@@ -64,12 +56,14 @@
                <textarea class="form-control" id="campo_obs" rows="3"></textarea>
             </div>
           </div>
-
+<br>
+</br>
         <button type="submit" class="btn btn-default">Guardar</button>
 
         <button type="submit" class="btn btn-default">Cancelar</button>
       </div>
-
+<br>
+</br>
 
 
 
