Cambios en el Modulo Ventas en las vistas y controladores

--- a/views/ventas/confirmar.html
+++ b/views/ventas/confirmar.html
@@ -1,12 +1,9 @@
 {{extend 'layout.html'}}
 <h1 align="center">CONFIRMAR</h1>
-<h4 align="center"> ¿Desea confirmar la venta?</h4>
+<h4 align="center"> ¿Confirma venta para ZIA- Ivan Zavala, N° Comprobante 0001, por el importe de $4199?</h4>
 <div class="form-group">
     <div class="col-sm-5"></div>
      <div class="col-sm-1">
-         <a href="{{=URL(c="ventas",f="guardado")}}" class="btn btn-default" role="button">SI</a>
+         <a href="{{=URL(c="ventas",f="vista_previa")}}" class="btn btn-default" role="button">ASEPTAR</a>
      </div>
-    <div class="col-sm-6">
-         <a href="{{=URL(c="ventas",f="detalle_ventas")}}" class="btn btn-default" role="button">NO</a>
-    </div>
 </div>
