--- a/views/ordencobro/forma_pago.html
+++ b/views/ordencobro/forma_pago.html
@@ -1,2 +1,10 @@
 {{extend 'layout.html'}}
+<h1>
+    Nueva forma de pago
+</h1>
+<div class="row">
+<div class="col-sm-12">
+
 {{=form}}
+</div>
+</div>
