--- a/views/ventas/vista_previa.html
+++ b/views/ventas/vista_previa.html
@@ -6,7 +6,7 @@
         <h2><IMG SRC="http://www.hersis.cl/servicios/servicio_tecnico.png" WIDTH=178 HEIGHT=180 /> C.V Technical Service</h2>
         </div>
         <div class="col-xs-6 text-right">
-            <h1>FACTURA Tipo: A</h1>
+            <h1>Factura Tipo: A</h1>
             <h1><small>N° 0001</small></h1>
             <h1><small>Fecha: 15/09/2016</small></h1>
         </div>
@@ -43,7 +43,6 @@
             <th><h4>Detalle</h4></th>
             <th><h4>Cantidad</h4></th>
             <th><h4>Precio Unitario</h4></th>
-            <th><h4>Descuento</h4></th>
             <th><h4>Total</h4></th>
         </tr>
     </thead>
@@ -53,7 +52,6 @@
             <td> Memoria Ram 16Gb</td>
             <td class=" text-center ">2</td>
             <td class=" text-right ">$800</td>
-            <td class=" text-right ">10%</td>
             <td class=" text-right ">$1600</td>
         </tr>
         <tr>
@@ -61,7 +59,6 @@
             <td>Disco Rigido 1 Tb</td>
             <td class=" text-center ">1</td>
             <td class=" text-right ">$1000</td>
-            <td class=" text-right ">0%</td>
             <td class=" text-right ">$1000</td>
         </tr>
         <tr>
@@ -69,7 +66,6 @@
             <td>Mother Asus XL-50bs</td>
             <td class=" text-center ">1</td>
             <td class=" text-right ">$1200</td>
-            <td class=" text-right ">10%</td>
             <td class=" text-right ">$1200</td>
         </tr>
     </tbody>
@@ -79,11 +75,15 @@
 </div>
 <div class="form-group">
 <div class="row">
-<div class="col-xs-5">
+<div class="col-xs-12">
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th><h5>Sub Total</h5></th>
+            <th><h5><B>TOTAL BRUTO</B></h5></th>
+            <th><h5>Descuento "(10%)" </h5></th>
+            <th><h5>Descuento "(15%)" </h5></th>
+            <th><h5>Descuento "(20%)" </h5></th>
+            <th><h5><B>SUB TOTAL</B></h5></th>
             <th><h5>Impuesto IVA "(10.5%)" </h5></th>
             <th><h5>Impuesto IVA "(21%)" </h5></th>
             <th><h5><B>TOTAL</B></h5></th>
@@ -91,18 +91,22 @@
     </thead>
     <tbody>
         <tr>
-            <td class=" text-right ">$3800</td>
-            <td class=" text-right ">$399</td>
+            <td class=" text-right "><B>$3800</B></td>
+            <td class=" text-right ">$800</td>
             <td class=" text-right ">$0</td>
-            <td class=" text-right "><B>$4199</B></td>
+            <td class=" text-right ">$0</td>
+            <td class=" text-right "><B>$3000</B></td>
+            <td class=" text-right ">$390</td>
+            <td class=" text-right ">$0</td>
+            <td class=" text-right "><B>$3390</B></td>
         </tr>
     </tbody>
 </table>
 </div>
-    <div class="col-xs-1"></div>
+</div>
+<div class="form-group">
 <div class="col-xs-5">
        <h2><IMG SRC="http://www.codigodebarras.com/UserFiles/Image/JPG/CB.jpg" WIDTH=500 HEIGHT=100 /> </h2>
-</div>
 </div>
 </div>
 </form>
