--- a/views/pagos/abm_bancos.html
+++ b/views/pagos/abm_bancos.html
@@ -1,3 +1,21 @@
 {{extend 'layout.html'}}
-<h1>ABM de Bancos</h1>
-{{=grilla}}
+<h1>{{=grilla}}</h1>
+<form class="form-horizontal" action="{{=URL(c="pagos", f="abm_bancos_guardar")}}" method="POST">
+  <div class="form-group ">
+    <label for="banco" class="col-sm-2 control-label">Banco</label>
+    <div class="col-sm-3">
+      <input type="text" class="form-control" id="banco" name="banco" placeholder="Nombre de banco">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="telefono" class="col-sm-2 control-label">Telefono</label>
+    <div class="col-sm-3">
+      <input type="text" class="form-control" id="telefono" name="telefono" maxlength="11" placeholder="Numero de telefono">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Guardar</button>
+    </div>
+  </div>
+</form>
