--- a/views/stock/resepcion_remito.html
+++ b/views/stock/resepcion_remito.html
@@ -40,46 +40,7 @@
 <br>
 </br>
 
-         <div class="form-group">
-            <label for="cliente" class="col-sm-2 control-label">Seleccione producto</label>
-            <div class="col-sm-3">
-                                <select class="form-control">
-                          <option>Detalle de producto</option>
-                          <option>Mouse</option>
-                          <option>Teclado</option>
-                          <option>Monitor</option>
-                          <option>Fuente</option>
-                          <option>Placa de red</option>
-                </select>
-             </div>
-             <label for="cantidad" class="col-sm-1 control-label">Cantidad</label>
-            <div class="col-sm-1">
-                <input type="number" class="form-control" id="cantidad" step="1" placeholder="">
-            </div>
-             <button type="button" class="btn btn-primary">Agregar</button>
-           </div>
-<br>
-</br>
-            <table class="table">
-    <caption></caption>
-    <thead>
-        <tr>
-            <th>Codigo</th> <th>Producto</th> <th>Cantidad</th> <th>Opciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr> <th scope="row">0001</th> <td>Monitor</td>  <td>1</td> <td> <a class="btn btn-default" role="button" >Eliminar</a></td></tr>
-        <tr> <th scope="row">0002</th> <td>Mouse</td><td>3</td><td> <a class="btn btn-default" role="button" >Eliminar</a></td> </tr>
-        <tr> <th scope="row">0003</th> <td>Memorias</td>  <td>5</td><td> <a class="btn btn-default" role="button" >Eliminar</a></td> </tr>
-    </tbody>
-</table>
-</h3>
 
-<br>
-</br>
-
-            <button type="submit" class="btn btn-default">Guardar</button>
-
-            <button type="submit" class="btn btn-default">Anular</button>
+ <a class="btn btn-default" role="button" href="{{=URL(c="stock",f="resepcion_remito2",vars={"id":1,"nombre":"mark"})}}">Siguiente</a> <a class="btn btn-default" role="button" href="{{=URL(c="default",f="index",vars={"id":1,"nombre":"mark"})}}">Cancelar</a>
 <br>
 </br>
