--- a/views/ventas/lista_ventas.html
+++ b/views/ventas/lista_ventas.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-<h1>LISTADO DE VENTAS</h1>
+<h1>LISTADO DE VENTAS POR CLIENTE</h1>
 <form class="form-horizontal">
     <div class="form-group">
         <div class="col-md-8">
